--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dev_dependencies:
   jaspr_web_compilers: ^4.1.1
   jaspr_builder: ^0.18.2
   jaspr_lints: ^0.3.1
+  jaspr_cli: ^0.18.0
   lints: ^5.0.0
 
 jaspr:
